Finalized style for guestbook and index, fixed button bug for dark mode and scroll top.

--- a/css/contactCss/contact.css
+++ b/css/contactCss/contact.css
@@ -70,6 +70,7 @@ button {
 	background-color: #ffcc00;
 	border: 1px solid black;
 	border-radius: 20px;
+    padding: 3px 20px;
 	align-items: center;
 	font-family: Arial, sans-serif;
 	font-size: 24px;
@@ -77,7 +78,7 @@ button {
 	width: auto; 
 	display: flex;
 	cursor: pointer;
-	margin-left: 15%;
+	margin-left: 8.1%;
 }
 
 /* Style when hovering over submit button */
