--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ header {
     position: relative;
     margin: 0;
     padding: 0;
-    z-index: 1;
+    z-index: 10;
 }
 
 header h1 {
@@ -107,7 +107,7 @@ a {
 /* CONTENT SECTION STYLING */
 .content {
     padding: 20px;
-    z-index: 1;
+    z-index: 10;
 }
 
 .content section {
